<resources>
    <string name="app_name">NotesApp</string>
    <string name="note_splash_screen">Note splash screen</string>
    <string name="author_name">By\n Ngoc Hung Le</string>
    <string name="app_name_splash">Note App</string>
    <string name="app_description_splash">Note your important tasks</string>
    <string name="floating_action_button_add_note">Add new note</string>
    <string name="note_title">Title</string>
    <string name="note_subtitle">SubTitle</string>
    <string name="note_priority">Priority</string>
    <string name="green_priority">green priority</string>
    <string name="yellow_priority">yellow priority</string>
    <string name="red_priority">red priority</string>
    <string name="note_body">Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_priority">card_priority</string>
    <string name="card_note">Note 1</string>
    <string name="card_note_body">Note body</string>
    <string name="delete_bar">Delete Bar</string>
    <string name="note_delete_question">Are you sure you want to delete this note?</string>
    <string name="note_date">5/17/2023</string>
    <string name="note_filter">note filter</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="search_menu">Search</string>
    <string name="fragment_home_name">Notes App</string>
    <string name="fragment_create_note">Create New Note</string>
    <string name="fragment_update_note">Update Note</string>
    <string name="menu_delete_title">Delete</string>
</resources>