<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateNoteFragment">

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="name"
        android:background="@drawable/custom_text_background"
        android:fontFamily="@font/product_sans_regular"
        android:hint="@string/note_title"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/etNoteSubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNoteSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="name"
        android:background="@drawable/custom_text_background"
        android:fontFamily="@font/product_sans_regular"
        android:hint="@string/note_subtitle"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvPriority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoteTitle" />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_regular"
        android:padding="16dp"
        android:text="@string/note_priority"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/etNoteBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteSubTitle"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/ivGreenPriority"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/custom_green_shape"
        android:contentDescription="@string/green_priority"
        app:layout_constraintBottom_toBottomOf="@+id/etNoteSubTitle"
        app:layout_constraintEnd_toStartOf="@+id/ivYellowPriority"
        app:layout_constraintStart_toEndOf="@+id/tvPriority"
        app:layout_constraintTop_toTopOf="@+id/etNoteBody" />

    <ImageView
        android:id="@+id/ivYellowPriority"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/custom_yellow_shape"
        android:contentDescription="@string/yellow_priority"
        app:layout_constraintBottom_toBottomOf="@+id/etNoteSubTitle"
        app:layout_constraintStart_toEndOf="@+id/ivGreenPriority"
        app:layout_constraintTop_toTopOf="@+id/etNoteBody" />

    <ImageView
        android:id="@+id/ivRedPriority"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/custom_red_shape"
        android:contentDescription="@string/red_priority"
        app:layout_constraintBottom_toBottomOf="@+id/etNoteSubTitle"
        app:layout_constraintStart_toEndOf="@+id/ivYellowPriority"
        app:layout_constraintTop_toTopOf="@+id/etNoteBody" />

    <EditText
        android:id="@+id/etNoteBody"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="name"
        android:background="@drawable/custom_text_background"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="start"
        android:hint="@string/note_body"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriority" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbCreateNote"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/floating_action_button_add_note"
        android:src="@drawable/ic_done"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>