<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.update.UpdateNoteFragment">

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_16"
        android:layout_marginTop="@dimen/margin_top_20"
        android:layout_marginEnd="@dimen/margin_end_20"
        android:autofillHints="name"
        android:background="@drawable/custom_text_background"
        android:fontFamily="@font/product_sans_regular"
        android:hint="@string/note_title"
        android:inputType="text"
        android:padding="@dimen/padding_16"
        app:layout_constraintBottom_toTopOf="@+id/etNoteSubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNoteSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_16"
        android:layout_marginTop="@dimen/margin_top_16"
        android:layout_marginEnd="@dimen/margin_end_20"
        android:autofillHints="name"
        android:background="@drawable/custom_text_background"
        android:fontFamily="@font/product_sans_regular"
        android:hint="@string/note_subtitle"
        android:inputType="text"
        android:padding="@dimen/padding_16"
        app:layout_constraintBottom_toTopOf="@+id/tvPriority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoteTitle" />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_20"
        android:layout_marginTop="@dimen/margin_top_20"
        android:fontFamily="@font/product_sans_regular"
        android:padding="@dimen/padding_16"
        android:text="@string/note_priority"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toTopOf="@id/etNoteBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteSubTitle"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/ivGreenPriority"
        android:layout_width="@dimen/width_30"
        android:layout_height="@dimen/height_30"
        android:background="@drawable/custom_green_shape"
        android:contentDescription="@string/green_priority"
        app:layout_constraintBottom_toBottomOf="@+id/etNoteSubTitle"
        app:layout_constraintEnd_toStartOf="@+id/ivYellowPriority"
        app:layout_constraintStart_toEndOf="@+id/tvPriority"
        app:layout_constraintTop_toTopOf="@+id/etNoteBody" />

    <ImageView
        android:id="@+id/ivYellowPriority"
        android:layout_width="@dimen/width_30"
        android:layout_height="@dimen/height_30"
        android:layout_marginStart="@dimen/margin_start_20"
        android:background="@drawable/custom_yellow_shape"
        android:contentDescription="@string/yellow_priority"
        app:layout_constraintBottom_toBottomOf="@+id/etNoteSubTitle"
        app:layout_constraintStart_toEndOf="@+id/ivGreenPriority"
        app:layout_constraintTop_toTopOf="@+id/etNoteBody" />

    <ImageView
        android:id="@+id/ivRedPriority"
        android:layout_width="@dimen/width_30"
        android:layout_height="@dimen/height_30"
        android:layout_marginStart="@dimen/margin_start_20"
        android:background="@drawable/custom_red_shape"
        android:contentDescription="@string/red_priority"
        app:layout_constraintBottom_toBottomOf="@+id/etNoteSubTitle"
        app:layout_constraintStart_toEndOf="@+id/ivYellowPriority"
        app:layout_constraintTop_toTopOf="@+id/etNoteBody" />

    <EditText
        android:id="@+id/etNoteBody"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_300"
        android:layout_marginStart="@dimen/margin_start_16"
        android:layout_marginTop="@dimen/margin_top_16"
        android:layout_marginEnd="@dimen/margin_end_20"
        android:autofillHints="name"
        android:background="@drawable/custom_text_background"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="start"
        android:hint="@string/note_body"
        android:inputType="text"
        android:padding="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriority" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbUpdateNote"
        android:layout_width="@dimen/width_80"
        android:layout_height="@dimen/height_70"
        android:layout_marginEnd="@dimen/margin_end_20"
        android:layout_marginBottom="@dimen/margin_bottom_20"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/floating_action_button_add_note"
        android:src="@drawable/ic_done"
        app:fabCustomSize="@dimen/custom_size_70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>