<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashActivity">

    <ImageView
        android:id="@+id/ivNoteSplash"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/note_splash_screen"
        android:src="@drawable/note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNoteSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/product_sans_bold"
        android:gravity="center"
        android:text="@string/app_name_splash"
        android:textColor="@color/red"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/ivNoteSplash" />

    <TextView
        android:id="@+id/tvAppDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center"
        android:text="@string/app_description_splash"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteSplash" />

    <ProgressBar
        android:id="@+id/progressBarSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:theme="@style/ProgressBar"
        app:layout_constraintBottom_toTopOf="@+id/tvAuthorSplash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppDescription" />

    <TextView
        android:id="@+id/tvAuthorSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center"
        android:text="@string/author_name"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>